src/wsc/wsc-text.js
// Generated by Peggy 3.0.0.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Document: peg$parseDocument };
  var peg$startRuleFunction = peg$parseDocument;

  var peg$c0 = ":>";
  var peg$c1 = "----";
  var peg$c2 = "|";
  var peg$c3 = ":--";
  var peg$c4 = ":-:";
  var peg$c5 = "-:-";
  var peg$c6 = "--:";
  var peg$c7 = "* ";
  var peg$c8 = ":";
  var peg$c9 = "~ ";
  var peg$c10 = "Critical Success";
  var peg$c11 = "Success";
  var peg$c12 = "Failure";
  var peg$c13 = "Critical Failure";
  var peg$c14 = "FREE-ACTION";
  var peg$c15 = "REACTION";
  var peg$c16 = "ONE-ACTION";
  var peg$c17 = "TWO-ACTIONS";
  var peg$c18 = "THREE-ACTIONS";
  var peg$c19 = "(";
  var peg$c20 = ")";
  var peg$c21 = "action";
  var peg$c22 = "feat";
  var peg$c23 = "item";
  var peg$c24 = "language";
  var peg$c25 = "spell";
  var peg$c26 = "trait";
  var peg$c27 = "activity";
  var peg$c28 = "itme";
  var peg$c29 = "iteem";
  var peg$c30 = "page";
  var peg$c31 = "bestiary pg.";
  var peg$c32 = "[";
  var peg$c33 = "http";
  var peg$c34 = "]";
  var peg$c35 = "{";
  var peg$c36 = "}";
  var peg$c37 = "__";
  var peg$c38 = "***";
  var peg$c39 = "**";
  var peg$c40 = "~~";
  var peg$c41 = "^^*^^";
  var peg$c42 = "^^";
  var peg$c43 = "normal";
  var peg$c44 = "blue_underline";
  var peg$c45 = "blue";
  var peg$c46 = "green_underline";
  var peg$c47 = "green";
  var peg$c48 = "cyan_underline";
  var peg$c49 = "cyan";
  var peg$c50 = "red_underline";
  var peg$c51 = "red";
  var peg$c52 = "yellow_underline";
  var peg$c53 = "yellow";

  var peg$r0 = /^[\-a-zA-Z0-9()@:%_+.~#?&\/\/=]/;
  var peg$r1 = /^[^:\n\r]/;
  var peg$r2 = /^[^|\n\r]/;
  var peg$r3 = /^[^|{}()\n\r]/;
  var peg$r4 = /^[^|{} \t\n\r_*~\^]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[ \t]/;
  var peg$r7 = /^[\r\n]/;

  var peg$e0 = peg$literalExpectation(":>", false);
  var peg$e1 = peg$literalExpectation("----", false);
  var peg$e2 = peg$literalExpectation("|", false);
  var peg$e3 = peg$literalExpectation(":--", false);
  var peg$e4 = peg$literalExpectation(":-:", false);
  var peg$e5 = peg$literalExpectation("-:-", false);
  var peg$e6 = peg$literalExpectation("--:", false);
  var peg$e7 = peg$literalExpectation("* ", false);
  var peg$e8 = peg$literalExpectation(":", false);
  var peg$e9 = peg$literalExpectation("~ ", false);
  var peg$e10 = peg$literalExpectation("Critical Success", false);
  var peg$e11 = peg$literalExpectation("Success", false);
  var peg$e12 = peg$literalExpectation("Failure", false);
  var peg$e13 = peg$literalExpectation("Critical Failure", false);
  var peg$e14 = peg$literalExpectation("FREE-ACTION", false);
  var peg$e15 = peg$literalExpectation("REACTION", false);
  var peg$e16 = peg$literalExpectation("ONE-ACTION", false);
  var peg$e17 = peg$literalExpectation("TWO-ACTIONS", false);
  var peg$e18 = peg$literalExpectation("THREE-ACTIONS", false);
  var peg$e19 = peg$literalExpectation("(", false);
  var peg$e20 = peg$literalExpectation(")", false);
  var peg$e21 = peg$literalExpectation("action", true);
  var peg$e22 = peg$literalExpectation("feat", true);
  var peg$e23 = peg$literalExpectation("item", true);
  var peg$e24 = peg$literalExpectation("language", true);
  var peg$e25 = peg$literalExpectation("spell", true);
  var peg$e26 = peg$literalExpectation("trait", true);
  var peg$e27 = peg$literalExpectation("activity", true);
  var peg$e28 = peg$literalExpectation("itme", true);
  var peg$e29 = peg$literalExpectation("iteem", true);
  var peg$e30 = peg$literalExpectation("page", true);
  var peg$e31 = peg$literalExpectation("Bestiary pg.", true);
  var peg$e32 = peg$literalExpectation("[", false);
  var peg$e33 = peg$literalExpectation("http", false);
  var peg$e34 = peg$classExpectation(["-", ["a", "z"], ["A", "Z"], ["0", "9"], "(", ")", "@", ":", "%", "_", "+", ".", "~", "#", "?", "&", "/", "/", "="], false, false);
  var peg$e35 = peg$literalExpectation("]", false);
  var peg$e36 = peg$literalExpectation("{", false);
  var peg$e37 = peg$literalExpectation("}", false);
  var peg$e38 = peg$literalExpectation("__", false);
  var peg$e39 = peg$literalExpectation("***", false);
  var peg$e40 = peg$literalExpectation("**", false);
  var peg$e41 = peg$literalExpectation("~~", false);
  var peg$e42 = peg$literalExpectation("^^*^^", false);
  var peg$e43 = peg$literalExpectation("^^", false);
  var peg$e44 = peg$literalExpectation("normal", false);
  var peg$e45 = peg$literalExpectation("blue_underline", false);
  var peg$e46 = peg$literalExpectation("blue", false);
  var peg$e47 = peg$literalExpectation("green_underline", false);
  var peg$e48 = peg$literalExpectation("green", false);
  var peg$e49 = peg$literalExpectation("cyan_underline", false);
  var peg$e50 = peg$literalExpectation("cyan", false);
  var peg$e51 = peg$literalExpectation("red_underline", false);
  var peg$e52 = peg$literalExpectation("red", false);
  var peg$e53 = peg$literalExpectation("yellow_underline", false);
  var peg$e54 = peg$literalExpectation("yellow", false);
  var peg$e55 = peg$classExpectation([":", "\n", "\r"], true, false);
  var peg$e56 = peg$classExpectation(["|", "\n", "\r"], true, false);
  var peg$e57 = peg$classExpectation(["|", "{", "}", "(", ")", "\n", "\r"], true, false);
  var peg$e58 = peg$classExpectation(["|", "{", "}", " ", "\t", "\n", "\r", "_", "*", "~", "^"], true, false);
  var peg$e59 = peg$otherExpectation("integer");
  var peg$e60 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e61 = peg$otherExpectation("whitespace");
  var peg$e62 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e63 = peg$otherExpectation("Eol");
  var peg$e64 = peg$classExpectation(["\r", "\n"], false, false);

  var peg$f0 = function(content) { return indented(content) };
  var peg$f1 = function() { return thematicBreak() };
  var peg$f2 = function() { return [] };
  var peg$f3 = function(parts) { return attemptConcat(parts) };
  var peg$f4 = function(headings, alignments, rows) { return table(headings, alignments, rows) };
  var peg$f5 = function() { return 'left'   };
  var peg$f6 = function() { return 'center' };
  var peg$f7 = function() { return 'right'  };
  var peg$f8 = function(items) { return list('bullet', items) };
  var peg$f9 = function(items) { return list('non_bullet', items) };
  var peg$f10 = function(items) { return list('success_level', items) };
  var peg$f11 = function(heading, content) { return item(heading, content) };
  var peg$f12 = function(content) { return content };
  var peg$f13 = function(heading, content) { return item(heading, content) };
  var peg$f14 = function(content) { return content };
  var peg$f15 = function(heading, content) { return item(heading, content) };
  var peg$f16 = function() { return icon(text()) };
  var peg$f17 = function(index, name, displayName) { return indexed(index, name.toLowerCase(), displayName || name) };
  var peg$f18 = function() { return text().toLowerCase() };
  var peg$f19 = function() { return 'action' };
  var peg$f20 = function() { return 'item' };
  var peg$f21 = function(num) { return book('CRB', num, text()) };
  var peg$f22 = function(num) { return book('BEST-1', num, 'Bestiary '+num) };
  var peg$f23 = function(url) { return external(url) };
  var peg$f24 = function(style, inline, tip) { return tooltip(inline, tip, style) };
  var peg$f25 = function(body) { return typography('underline', body) };
  var peg$f26 = function(body) { return typography('big_bold', body) };
  var peg$f27 = function(body) { return typography('bold', body) };
  var peg$f28 = function(body) { return typography('strikethrough', body) };
  var peg$f29 = function() { return asterisk() };
  var peg$f30 = function(body) { return typography('superscript', body) };
  var peg$f31 = function() { return text().trim() };
  var peg$f32 = function() { return text().trim() };
  var peg$f33 = function() { return text().trim() };
  var peg$f34 = function() { return text() };
  var peg$f35 = function() { return parseInt(text(), 10) };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseSection();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseSection();
    }
    if (s1.length < 1) {
      peg$currPos = s0;
      s0 = peg$FAILED;
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseSection() {
    var s0;

    s0 = peg$parseMultiLine();
    if (s0 === peg$FAILED) {
      s0 = peg$parseEmptyLine();
      if (s0 === peg$FAILED) {
        s0 = peg$parseIndentedLine();
        if (s0 === peg$FAILED) {
          s0 = peg$parseThematicBreak();
          if (s0 === peg$FAILED) {
            s0 = peg$parseRegularLine();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseMultiLine() {
    var s0;

    s0 = peg$parseTable();
    if (s0 === peg$FAILED) {
      s0 = peg$parseList();
    }

    return s0;
  }

  function peg$parseIndentedLine() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseRegularLine();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseThematicBreak() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEol();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEmptyLine() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseEol();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f2();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRegularLine() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parsePart();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parsePart();
    }
    if (s2.length < 1) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEol();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f3(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTable() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseTableHeadings();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseTableAlignments();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseTableRow();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseTableRow();
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s1, s2, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTableHeadings() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseTableHeading();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 124) {
        s4 = peg$c2;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s4 !== peg$FAILED) {
        s4 = peg$parseTableHeading();
        if (s4 === peg$FAILED) {
          peg$currPos = s3;
          s3 = peg$FAILED;
        } else {
          s3 = s4;
        }
      } else {
        s3 = s4;
      }
    }
    if (s2.length < 2) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEol();
      if (s2 !== peg$FAILED) {
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTableAlignments() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseTableAlignment();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 124) {
        s4 = peg$c2;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s4 !== peg$FAILED) {
        s4 = peg$parseTableAlignment();
        if (s4 === peg$FAILED) {
          peg$currPos = s3;
          s3 = peg$FAILED;
        } else {
          s3 = s4;
        }
      } else {
        s3 = s4;
      }
    }
    if (s2.length < 2) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEol();
      if (s2 !== peg$FAILED) {
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTableAlignment() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f5();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c5) {
          s1 = peg$c5;
          peg$currPos += 3;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f6();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 3) === peg$c6) {
          s1 = peg$c6;
          peg$currPos += 3;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f7();
        }
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parseTableRow() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseTableCell();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 124) {
        s4 = peg$c2;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s4 !== peg$FAILED) {
        s4 = peg$parseTableCell();
        if (s4 === peg$FAILED) {
          peg$currPos = s3;
          s3 = peg$FAILED;
        } else {
          s3 = s4;
        }
      } else {
        s3 = s4;
      }
    }
    if (s2.length < 2) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEol();
      if (s2 !== peg$FAILED) {
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTableCell() {
    var s0, s1;

    s0 = [];
    s1 = peg$parsePart();
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsePart();
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseList() {
    var s0;

    s0 = peg$parseBulletedList();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNonBulletedList();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSuccessLevelList();
      }
    }

    return s0;
  }

  function peg$parseBulletedList() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseBulletedListItem();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseBulletedListItem();
    }
    if (s2.length < 1) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f8(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNonBulletedList() {
    var s0, s1, s2, s3;
